// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switch /> renders and matches the snapshot 1`] = `
<div
  class="p-form__group p-form-validation"
>
  <div
    class="p-form__control u-clearfix"
  >
    <label
      class="p-switch"
    >
      <input
        class="p-switch__input"
        role="switch"
        type="checkbox"
      />
      <span
        class="p-switch__slider"
      />
      <span
        class="p-switch__label"
      >
        Switch
      </span>
    </label>
  </div>
</div>
`;

exports[`<Switch /> renders and matches the snapshot with disabled 1`] = `
<div
  class="p-form__group p-form-validation"
>
  <div
    class="p-form__control u-clearfix"
  >
    <label
      class="p-switch"
    >
      <input
        class="p-switch__input"
        disabled=""
        role="switch"
        type="checkbox"
      />
      <span
        class="p-switch__slider"
      />
      <span
        class="p-switch__label"
      >
        Disabled switch
      </span>
    </label>
  </div>
</div>
`;
